==> Bob46Zhu/STM32F103_GIT/Test/src/SPI_FLASH/spi_flash.c <==
#include "spi_flash.h"

u8 SPI_FLASH_SendByte(u8 byte)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
	//等待发送缓冲区为空，TXE事件
	while(SPI_I2S_GetFlagStatus(FLASH_SPIx,SPI_I2S_FLAG_TXE) == RESET)
	{
		if((SPITimeout--) == 0)
		{
			return SPI_TIMEOUT_UserCallback(0);
		}
	}

	//写入数据寄存器，把要写入的数据写入发送缓冲区
	SPI_I2S_SendData(FLASH_SPIx,byte);
	SPITimeout = SPIT_FLAG_TIMEOUT;
	//等待接收缓冲区非空，RXNE事件
	while(SPI_I2S_GetFlagStatus(FLASH_SPIx,SPI_I2S_FLAG_RXNE) == RESET)
	{
		if((SPITimeout--) == 0)
		{
			return SPI_TIMEOUT_UserCallback(1);
		}
	}
	//读取数据寄存器，获取接收缓冲区数据
	return SPI_I2S_ReceiveData(FLASH_SPIx);
}

u16 SPI_FLASH_SendHalfWord(u16 HalfWord)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
	//等待发送缓冲区为空，TXE事件
	while(SPI_I2S_GetFlagStatus(FLASH_SPIx,SPI_I2S_FLAG_TXE) == RESET)
	{
		if((SPITimeout--) == 0)
		{
			return SPI_TIMEOUT_UserCallback(2);
		}
	}

	//写入数据寄存器，把要写入的数据写入发送缓冲区
	SPI_I2S_SendData(FLASH_SPIx,HalfWord);

	SPITimeout = SPIT_FLAG_TIMEOUT;
	//等待接收缓冲区非空，RXNE事件
	while(SPI_I2S_GetFlagStatus(FLASH_SPIx,SPI_I2S_FLAG_RXNE) == RESET)
	{
		if((SPITimeout--) == 0)
		{
			return SPI_TIMEOUT_UserCallback(3);
		}
	}
	//读取寄存器，获取接收缓冲区数据
	return SPI_I2S_ReceiveData(FLASH_SPIx);
}
