==> MyBlackHole/stm32_learn/SPI-FLASH/Core/Src/spi_flash.c <==
#include "spi_flash.h"
#include "stm32f1xx_hal.h"
#define TxBufferSize1 (countof(TxBuffer1) - 1)
#define RxBufferSize1 (countof(TxBuffer1) - 1)
#define countof(a) (sizeof(a) / sizeof(*(a)))
#define BufferSize (countof(Tx_Buffer) - 1)
#define FLASH_WriteAddress 0x00000
#define FLASH_ReadAddress FLASH_WriteAddress
#define FLASH_SectorToErase FLASH_WriteAddress

uint8_t SPI_FLASH_SendByte(uint8_t byte) {
  // SPITimeout = SPIT_FLAG_TIMEOUT;

  // /* 等待发送缓冲区为空，TXE事件 */
  // while (__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_TXE) == RESET) {
  //   if ((SPITimeout--) == 0)
  //     return SPI_TIMEOUT_UserCallback(0);
  // }

  // /* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
  // WRITE_REG(hspi1.Instance->DR, byte);

  // SPITimeout = SPIT_FLAG_TIMEOUT;

  // /* 等待接收缓冲区非空，RXNE事件 */
  // while (__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_RXNE) == RESET) {
  //   if ((SPITimeout--) == 0)
  //     return SPI_TIMEOUT_UserCallback(1);
  // }

  // /* 读取数据寄存器，获取接收缓冲区数据 */
  // return READ_REG(hspi1.Instance->DR);

	uint8_t ret;
	HAL_SPI_TransmitReceive(&hspi1, &byte, &ret, 1, 100);
	return ret;
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord) {

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* Loop while DR register in not emplty */
  while (__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_TXE) == RESET) {
    if ((SPITimeout--) == 0)
      return SPI_TIMEOUT_UserCallback(2);
  }

  /* Send Half Word through the SPIx peripheral */
  WRITE_REG(hspi1.Instance->DR, HalfWord);

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* Wait to receive a Half Word */
  while (__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_RXNE) == RESET) {
    if ((SPITimeout--) == 0)
      return SPI_TIMEOUT_UserCallback(3);
  }
  /* Return the Half Word read from the SPI bus */
  return READ_REG(hspi1.Instance->DR);
}
